--- a/cours_javascript/exercices/jeu_memory/style.css
+++ b/cours_javascript/exercices/jeu_memory/style.css
@@ -1,3 +1,5 @@
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css);
+
 * {
     margin: 0;
     padding: 0;
